# audiolm

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
scripts/: asr_preprocessing.py  convert_weights.py  datacollator.py  download_weights.py  generate_asr_english.sh  generate_asr_german.sh  generate_t2t_dataset.py  generate_t2t_dataset.sh  merge_datasets.py  preprocess_datasets.sh  run_s2st_preprocessing.sh  s2st_preprocessing.py  train.ps1  train.py  train.sh
src/audiolm/: asr_preprocessing.py  audio_tokenization.py  audiolm.py  config.py  datasets.py  functional.py  layers.py  qwen.py  run_asr_preprocessing.sh  run_audio_tokenization.sh  run_s2st_preprocessing.sh  run_ttt_preprocessing.sh  s2st_preprocessing.py  t2t_preprocessing.py  trainer.py
tests/: audiolm_test.py  bleuscore_test.py  dataset_train_test.py  generation_test.py  hf_model_test.py  layers_test.py  model_test.py  test_dataset.py  wer_test.py
