[project]
name = "audiolm"
version = "0.1.0"
description = "An Audio Language Model"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "ajdsouz@outlook.com" },
    { name = "sslet", email = "s8saslet@stud.uni-saarland.de" },
    { name = "Houda", email = "pqr@gmail" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "datasets==2.21.0",
    "librosa>=0.11.0",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "speechtokenizer>=1.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.9.0"
]
gpu128 = [
    "torch>=2.9.0"
]
gpu126 = [
    "torch>=2.9.0"
]

[tool.uv]
conflicts = [
    [
        {extra = "cpu"},
        {extra = "gpu128"},
        {extra = "gpu126"},
    ]
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
audiolm = { path = "src" }
scripts = { path = "." }
torch = [
    {index = "pytorch-cpu", extra = "cpu"}, # intel cpu
    {index = "pytorch-gpu126", extra = "gpu126"}, # CoLi Cluster
    {index = "pytorch-gpu128", extra = "gpu128"}, # CoLi Cluster

]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
