[project]
name = "audiolm"
version = "0.1.0"
description = "An Audio Language Model"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "ajdsouz@outlook.com" },
    { name = "sslet", email = "s8saslet@stud.uni-saarland.de" },
    { name = "Houda", email = "pqr@gmail" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "safetensors>=0.7.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.4.1"
]
gpu118 = [
    "torch==2.4.1"
]
gpu121 = [
    "torch==2.4.1"
]

[tool.uv]
conflicts = [
    [
        {extra = "cpu"},
        {extra = "gpu118"},
        {extra = "gpu121"},
    ]
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "typeguard>=4.4.4",
]

[tool.uv.sources]
audiolm = { path = "src" }
scripts = { path = "." }
torch = [
    {index = "pytorch-cpu", extra = "cpu"}, # intel / amd cpu (Apple silicon untested)
    {index = "pytorch-gpu121", extra = "gpu121"}, # jones@lst
    {index = "pytorch-gpu118", extra = "gpu118"}, # jones@lst

]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
