[project]
name = "audiolm"
version = "0.1.0"
description = "An Audio Language Model"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "ajdsouz@outlook.com" },
    { name = "sslet", email = "s8saslet@stud.uni-saarland.de" },
    { name = "Houda", email = "pqr@gmail" }
]
requires-python = ">=3.12, <3.14" 
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.4.1",
    "jiwer>=4.0.0",
    "langdetect>=1.0.9",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-pyindex>=1.0.9",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "sacrebleu>=2.6.0",
    "safetensors>=0.7.0",
    "setuptools>=80.9.0",
    "torch>=2.11.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
    "wheel>=0.46.3",
]

[tool.uv.sources]
audiolm = { path = "src" }
scripts = { path = "." }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[project.optional-dependencies]
gpu128 = [
    "torch",
    "torchvision",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "typeguard>=4.4.4",
]

[tool.uv.extra-build-dependencies]
nvidia-pyindex = ["pip"]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
verify_ssl = true
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


